augur-cli/crates/augur-core/tests/compile_fail/cases/cf_001_step_status_non_exhaustive.tests.rs
use augur_domain::domain::StepStatus;

fn non_exhaustive(status: StepStatus) -> bool {
    match status {
        StepStatus::Pending => true,
    }
}

fn main() {
    let _ = non_exhaustive(StepStatus::Pending);
}
