augur-cli/crates/augur-core/tests/compile_fail/cases/cf_001_step_status_non_exhaustive.tests.stderr
error[E0004]: non-exhaustive patterns: `StepStatus::Running`, `StepStatus::Completed` and `StepStatus::Failed` not covered
 --> tests/compile_fail/cases/cf_001_step_status_non_exhaustive.tests.rs:4:11
  |
4 |     match status {
  |           ^^^^^^ patterns `StepStatus::Running`, `StepStatus::Completed` and `StepStatus::Failed` not covered
  |
note: `StepStatus` defined here
 --> $WORKSPACE/crates/augur-domain/src/domain/task_types.rs
  |
  | pub enum StepStatus {
  | ^^^^^^^^^^^^^^^^^^^
...
  |     Running,
  |     ------- not covered
  |     /// Step finished successfully.
  |     Completed,
  |     --------- not covered
  |     /// Step terminated with an error.
  |     Failed,
  |     ------ not covered
  = note: the matched value is of type `StepStatus`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
  |
5 ~         StepStatus::Pending => true,
6 ~         StepStatus::Running | StepStatus::Completed | StepStatus::Failed => todo!(),
  |
